@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-25T08:23:09Z",
+  "timestamp" : "2022-09-26T08:26:46Z",
   "count_outdated" : 140,
   "uniques_outdated" : 96,
-  "count" : 147,
-  "uniques" : 103,
+  "count" : 148,
+  "uniques" : 104,
   "clones" : [
     {
       "timestamp": "2022-09-13T00:00:00Z",
@@ -49,6 +49,13 @@
     },
     {
       "timestamp": "2022-09-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-26T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
